# mrkr2

./: .env.example  .gitignore  LICENSE.md  README.md  _ocr_result.json  _scan_result.json  _textract_raw.json  demo.py  document_viewer_old.ts  entrypoint.py  label_maker_old.ts  manifest.json  pyproject.toml  requirements.txt  setup.py  test.json  test2.json  test3.json
.deploy/: docker.app.yaml  docker.db.yaml  dockerfile
.githooks/: pre-commit
app/: __init__.py  __main__.py
app/config/: config.dev.json  logging.dev.json
app/core/: app.py  exceptions.py  lifespan.py
app/crud/: user.py
app/database/: __init__.py  database.py  dependencies.py
app/models/: __init__.py
app/schemas/: tags.py
app/services/: config.py  dependencies.py  logging.py  static.py  templates.py
demos/: demo.py
frontend/: tsconfig.json
frontend/components/: classification_labeler.ts  color_helpers.ts  document_viewer.ts  filtered_table.ts  hamburger_button.ts  icon_button.ts  label_button.ts  label_fragment.ts  label_maker.ts  label_maker_old.ts  label_viewer.ts  list_based_content.ts  message_box.ts  project_content.ts  project_settings_form.ts  projects_content.ts  remote_list_popup.ts  resizable_panes.ts  styled-button.ts  styled-dialog.ts  styled_button.ts  styled_link.ts  tab_container.ts  text_labeler.ts
frontend/static/: index.html  style.css
frontend/templates/: base.html  create_project.html  edit_project.html  labeling.html  project.html  project_old.html  projects.html  update_project.html
mrkr/: __init__.py  __main__.py
mrkr/core/: app.py  (+5 more)
test/: _testcase.py  api_test.py  core_test.py  crud_test.py  database_test.py  services_test.py
(+118 files in other folders)
