[build-system]
requires = ["setuptools==59.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mrkr"
version = "2.0.0b1"
authors = [
  { name="Max Brixner", email="max.brixner@gmail.com" },
]
description = "A tool to label pages, blocks and text within images and PDF files."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
keywords = ["label", "annotation", "image processing", "pdf processing", "machine learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: CC BY-NC-ND 4.0",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pdf2image>=1.17.0",
  "pydantic>=2.11.5",
  "pydantic[email]>=2.11.5",
  "pytesseract>=0.3.13",
  "psycopg2-binary>=2.9.10",
  "sqlmodel>=0.0.24",
  "requests>=2.32.4",
  "uvicorn>=0.34.2",
  "bcrypt>=4.3.0",
  "boto3>=1.39.13"
]

[project.urls]
Source = "https://github.com/maxbrixner/mrkr2"
Issues = "https://github.com/maxbrixner/mrkr2/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.15.0",
  "setuptools>=59.0.1",  # Ensure compatibility with the environment
  "setuptools_scm[toml]>=8.3.1"
]

[tool.setuptools]
packages = ["mrkr"]